--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="left-container">
             <div class="logo">
-                <img src="./images/odin-logo.png"> ODIN
+                <img src="images/odin-logo.png"> ODIN
             </div>
             <p>
                 Photo by 
